# convert-stream-to-frame-service

./: .dockerignore  .gitignore  README.md  docker-compose.yml  environment.env  install-package.sh  main.py  ood-run.sh  pyproject.toml  run.sh  service.py
broker/: broker.py
database/: database.py
docker/: Dockerfile
misc/constant/: message.py  value.py
misc/helper/: helper.py
requirement/: requirements.txt
src/: main.py  service.py
src/database/: database.py
src/eureka/: eureka.py
src/misc/constant/: message.py  value.py
src/misc/helper/: helper.py
src/model/: model.py
src/storage/: storage.py
storage/: storage.py
